--- a/style.css
+++ b/style.css
@@ -89,7 +89,11 @@ footer .socials a {
 /* === ABOUT PAGE STYLES === */
 .about-section {
     background-color: #000000;
-    padding: 40px 20px;
+    padding-top: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 60px;
+    box-sizing: border-box;
 }
 
 .container {
