--- a/style.css
+++ b/style.css
@@ -89,11 +89,11 @@ footer .socials a {
 /* === ABOUT PAGE STYLES === */
 .about-section {
     background-color: #000000;
-    padding-top: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 60px;
+    padding: 40px 20px;
     box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    overflow: visible;
 }
 
 .container {
