--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ footer .socials a {
 /* === ABOUT PAGE STYLES === */
 .about-section {
   padding: 40px 20px;
+  margin-top: 80px;
 }
 
 .container {
