--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
 }
 
 .portfolio-card {
-  background-color: #E8FC94;
+  background-color: #A8EAFD;
   color: #121212;
   border-radius: 12px;
   overflow: hidden;
